# Pilas-and-queues

./: .gitignore  CMakeLists.txt  main.cpp
ejercicios/: .gitignore  Makefile
ejercicios/ejercicio1/: Tanque.cpp  Tanque.h  main.cpp
ejercicios/ejercicio2/: Sala.cpp  Sala.h  main.cpp
ejercicios/ejercicio3/: Persona.cpp  Persona.h  main.cpp
ejercicios/ejercicio4/: Atleta.cpp  Atleta.h  Carrera.cpp  Carrera.h  main.cpp
ejercicios/ejercicio5/: Tren.cpp  Tren.h  Vagon.cpp  Vagon.h  main.cpp
headers/: cola.h  pila.h
src/: dequeue.cpp  empty_cola.cpp  empty_pila.cpp  enqueue.cpp  front_cola.cpp  pop_pila.cpp  push_pila.cpp  show_cola.cpp  show_pila.cpp  size_cola.cpp  size_pila.cpp  top_pila.cpp
